--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
+  "overrides": {
+    "lovable-tagger": {
+      "vite": "^6.3.4"
+    }
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -83,7 +88,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
+    "lovable-tagger": "^1.1.8",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
