--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/jest": "^29.5.14",
     "@types/next": "^8.0.7",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
