--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^29.5.14",
     "@types/next": "^9.0.0",
