--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/node": "^22.15.14",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
